<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>br.com.ramalho.nesomar</groupId>
	<artifactId>selecao-java</artifactId>
	<version>1.0.0</version>
	<packaging>pom</packaging>
	<name>selecao-java</name>
	<description>Artefato parent para o projeto Seleção Java</description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>8</java.version>
		<version.dependency.javaee>7.0</version.dependency.javaee>
		<version.surefire.plugin>3.0.0-M3</version.surefire.plugin>
		<version.plugin.compiler>3.8.0</version.plugin.compiler>
		<version.plugin.war>3.2.2</version.plugin.war>
		<version.junit>4.12</version.junit>
		<version.mockito>1.10.19</version.mockito>
		<skip.tests>true</skip.tests>
		<target>default</target>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${version.plugin.compiler}</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<debug>true</debug>
					<optimize>true</optimize>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${version.surefire.plugin}</version>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-api</artifactId>
			<version>${version.dependency.javaee}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${version.junit}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${version.mockito}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.2.5</version>
		</dependency>
	</dependencies>
	<modules>
		<module>selecao-java-persistence</module>
		<module>selecao-java-service</module>
		<module>selecao-java-rest</module>
		<module>seleca-java-ear</module>
	</modules>
</project>